# curo

./: .confessions  .gitignore  .todo  Cargo.toml  FUCK  README.md  fuck  fuck.c  fuck_gcc.s  hello_world.c  say  say.c  temp  test  test.c  test.s
backend/: Cargo.toml  README.md
backend/src/: lib.rs
backend/src/allocator/: allocator.rs  allocator_ctx.rs  mod.rs
backend/src/allocator/allocations/: function.rs  instruction.rs  mod.rs  program.rs  top_level.rs
backend/src/asm/: convert.rs  instruction.rs  mod.rs
backend/src/emitter/: emit.rs  emitter.rs  mod.rs
backend/src/generator/: generator.rs  generator_ctx.rs  mod.rs  translator.rs
backend/src/generator/casts/: function.rs  mod.rs  program.rs  top_level.rs
backend/src/generator/casts/instruction/: cast_binary.rs  cast_funcall.rs  cast_jump.rs  cast_return.rs  cast_unary.rs  mod.rs
backend/src/legalizer/: legalizer.rs  legalizer_ctx.rs  mod.rs
backend/src/legalizer/fixes/: binop.rs  compare.rs  function.rs  instruction.rs  mod.rs  mov.rs  program.rs  top_level.rs  unary.rs
common/: Cargo.toml  README.md
common/src/: lib.rs
driver/: Cargo.toml  README.md  keyword.rs  loop_labeling.rs  mod.rs  node.rs  resolution.rs
driver/src/: main.rs
driver/src/compiler/: compiler.rs  mod.rs  pipeline_ctx.rs
driver/src/compiler/stages/: analyzer.rs  lexer.rs  mod.rs  parser.rs  tac_generator.rs  x84_64.rs
frontend/: Cargo.toml  README.md
frontend/src/: lib.rs
language/: Cargo.toml  README.md
language/src/: generic.rs  lib.rs
macros/: Cargo.toml  README.md  emit.rs  emitter.rs
middleend/: Cargo.toml  README.md
middleend/src/generator/: generator.rs  mod.rs  tacgen_ctx.rs
middleend/src/generator/transforms/: block.rs  block_item.rs  declaration.rs  expression.rs  for_init.rs  function.rs  function_declaration.rs  mod.rs  program.rs  statement.rs  variable_declaration.rs
src/: lib.rs
src/ast/: mod.rs  (+2 more)
(+134 files in other folders)
