[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
language = { path = "../language" }
common = { path = "../common" }
match_format = { path = "../macros/match_format" }
accessors = { path = "../macros/accessors"}
constructors = { path = "../macros/constructors"}
zawarudo = { path = "../macros/zawarudo" }