[package]
name = "driver"
version = "0.1.0"
edition = "2024"

[dependencies]
debug_macro = { path = "../macros/debug_macro" }
language = { path = "../language" }
common = { path = "../common" }
frontend = { path = "../frontend" }
middleend = { path = "../middleend" }
backend = { path = "../backend" }