[package]
name = "driver"
version = "0.1.0"
edition = "2024"

[features]
zawarudo = []

[dependencies]
zawarudo = { path = "../macros/zawarudo" }
accessors = { path = "../macros/accessors"}
constructors = { path = "../macros/constructors"}
language = { path = "../language" }
common = { path = "../common" }
frontend = { path = "../frontend" }
middleend = { path = "../middleend" }
backend = { path = "../backend" }