[package]
name = "middleend"
version = "0.1.0"
edition = "2024"

[features]
zawarudo = []

[dependencies]
language = { path = "../language" }
common = { path = "../common" }
accessors = { path = "../macros/accessors"}
constructors = { path = "../macros/constructors"}
zawarudo = { path = "../macros/zawarudo" }